fix: x overflow

--- a/src/style/l-theme/l-header.scss
+++ b/src/style/l-theme/l-header.scss
@@ -8,6 +8,8 @@
   padding-left: $gutter-width;
   padding-right: $gutter-width;
   z-index: 100000;
+  top: 0;
+  left: 0;
 }
 
 .l-site-header__container {
