--- a/src/style/main.scss
+++ b/src/style/main.scss
@@ -17,5 +17,6 @@ body {
   @if $margin-document == true {
     margin-left:  -$gutter-width;
     margin-right: -$gutter-width;
+    overflow-x: hidden;
   }
 }
